--- a/index.html
+++ b/index.html
@@ -5,14 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=search" />
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 
 </head>
 
 <body>
+    <!-- Ketu fillon headeri kryesor -->
     <header class="header-container">
         <div class="pre-header">
             <div class="header-span">
@@ -37,6 +42,20 @@
             </div>
         </div>
     </header>
+
+    <!-- Ketu mbaron headeri kryesor -->
+    <!-- Ketu fillon headeri i dyte i nav bar -->
+    <div class="secondary-header">
+        <ul class="ul-nav-secondary-header">
+            <li><a href="#"><span class="megaproducts"><i class="fas fa-bars"></i></span>Produkte</a></li>
+            <li><a href="#">Oferta</a></li>
+            <li><a href="#">Kontakto</a></li>
+
+            <li><a href="#">M help <span class="helpmega"><i class="fas fa-headphones"></i></span></a></li>
+        </ul>
+    </div>
+    <!-- Ketu mbaron headeri i dyte i nav bar -->
+
 
 </body>
 
