--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 
+
 </head>
 
 <body>
@@ -51,10 +52,39 @@
             <li><a href="#">Oferta</a></li>
             <li><a href="#">Kontakto</a></li>
 
-            <li><a href="#">M help <span class="helpmega"><i class="fas fa-headphones"></i></span></a></li>
+            <li><a href="#">help <span class="helpmega"><i class="fas fa-headphones"></i></span></a></li>
         </ul>
     </div>
     <!-- Ketu mbaron headeri i dyte i nav bar -->
+
+
+
+    <!-- ketu fillon seksioni i telefonave -->
+    <h1>Telefonat mobile</h1>
+    <section class="phonesection">
+        <button class="scroll-button scroll-btn-left">&#10094;</button>
+
+
+        <div class="phonecardscontainer" id="phonecardscontainer">
+            <div class="phonecard">
+                <span class="about-phone">Super Cmim</span>
+                <img class="phoneimage" src="images/Apple-iPhone-16-Pro-hero-240909_inline.jpg.large.jpg" alt="Phone 1">
+                <h3 class="phonename"></h3>
+                <div class="phonedescription">
+                </div>
+                <div class="buyphone">
+                    <span class="phoneprice"></span>
+                    <button class="buyphone"><i class="fa-solid fa-cart-shopping"></i></button>
+                </div>
+            </div>
+
+        </div>
+
+        <button class="scroll-button scroll-btn-right">&#10095;</button>
+    </section>
+    <script src="script.js"></script>
+
+    <!-- ketu mbaron seksioni i telefonave -->
 
 
 </body>
