work on progres

--- a/index.html
+++ b/index.html
@@ -33,9 +33,6 @@
                 </span>
 
             </div>
-
-
-
             <div class="logos-container">
                 <span class="header-logos"><i class="fas fa-user"></i></span>
                 <span class="header-logos"><i class="far fa-heart"></i></span>
@@ -56,9 +53,26 @@
         </ul>
     </div>
     <!-- Ketu mbaron headeri i dyte i nav bar -->
+    <!-- ketu fillon afisimi permbajtjes se faqes -->
+    <section class="contain">
+        <div class="about-contain">
+            <div class="main-container">
+                <span class="preview-contain">mobile Phones</span>
+                <img class="image-contain" src="">
+                <span class="redirect-contain">
+                    <span class="icon-contain"><i class="fa-solid fa-arrow-up-right-from-square"></i></span>
+
+                    <span class="tooltip-text">shiko produket</span>
+                </span>
+
+            </div>
+        </div>
+    </section>
 
 
 
+
+    <!-- ketu mbaron afisimi permbajtjes se faqes -->
     <!-- ketu fillon seksioni i telefonave -->
     <h1>Telefonat mobile</h1>
     <section class="phonesection">
@@ -83,7 +97,6 @@
         <button class="scroll-button scroll-btn-right">&#10095;</button>
     </section>
     <script src="script.js"></script>
-
     <!-- ketu mbaron seksioni i telefonave -->
 
 
