work on progres/creating navigation btw pages and cart

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=search" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <script type="module" src="script.js" async></script>
 
 
@@ -71,11 +72,13 @@
                     <li><i class="fa-solid fa-volume-high mobile-icon"></i>speakers</li>
                 </ul>
             </li>
-            <li><a href="#">Oferta</a></li>
-            <li><a href="#">Kontakto</a></li>
-            <li><a href="#">Help <span class="helpmega"><i class="fas fa-headphones"></i></span></a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="oferta.html">Oferta</a></li>
+            <li><a href="kontakto.html">Kontakto</a></li>
+            <li><a href="help.html">Help <span class="helpmega"><i class="fas fa-headphones"></i></span></a></li>
         </ul>
     </div>
+
 
     <!-- Ketu mbaron headeri i dyte i nav bar -->
     <!-- ketu fillon afisimi permbajtjes se faqes -->
@@ -93,6 +96,12 @@
             </div>
         </div>
     </section>
+    <!-- 
+    ketu fillon seksioni i videos -->
+
+
+    <!-- ketu mbaron seksioni i videos -->
+
 
     <!-- dua te bej nje seksion ketu per te aafisuar video -->
     <section class="dual-video-section">
@@ -131,9 +140,6 @@
             <span class="akses-ofert">shiko oferten...</span>
         </div>
     </section>
-
-
-
     <!-- ketu mbaron afisimi i videos -->
 
 
@@ -189,6 +195,99 @@
     </section>
     <!-- ketu mbaron seksioni i koshit te  blerjeve -->
 
+
+    <!-- ketu fillon afisimi i hartes -->
+
+    <section class="map-container">
+        <div id=map>
+
+        </div>
+        <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+
+    </section>
+
+
+    <!-- ketu mbaron afisimi i hartes -->
+
+
+
+    <section class="footer-section">
+        <div class="main-div">
+            <footer class="main-footer">
+                <div class="div-footer">
+                    <h3 class="header-footer-contain">Sherbime per klientet</h3>
+                    <span class="span-header-footer-contain">Hapja e dergeses</span>
+                    <span class="span-header-footer-contain">30 dite e drejte kthimi</span>
+                    <span class="span-header-footer-contain"> Pagesa me karte pa interes</span>
+                    <span class="span-header-footer-contain">Pagesa me keste dhe financim</span>
+                    <span class="span-header-footer-contain">Garanci dhe sherbime</span>
+                    <span class="span-header-footer-contain">Black friday Megaelectronic</span>
+
+                </div>
+                <div class="div-footer">
+                    <h3 class="header-footer-contain">Porosite dhe dergesat</h3>
+                    <span class="span-header-footer-contain">Llogaria ime ne Megaelectronic</span>
+                    <span class="span-header-footer-contain">Shperndarja e porosive</span>
+                    <span class="span-header-footer-contain">Menyra pagese dhe financime</span>
+                    <span class="span-header-footer-contain">Dua te shes ne Megaelectronic</span>
+
+
+
+
+                </div>
+                <div class="div-footer">
+                    <h3 class="header-footer-contain">Suport per klientet</h3>
+                    <span class="span-header-footer-contain">Formular rikthim produkti</span>
+                    <span class="span-header-footer-contain">Kontakt</span>
+                    <span class="span-header-footer-contain">Kushte te pergjithsme e dergeses me poste</span>
+                    <span class="span-header-footer-contain">Mbrojta e konsumatorit</span>
+                    <button class="ask-support-button">suport online</button>
+
+                </div>
+                <div class="div-footer">
+                    <h3 class="header-footer-contain">Megaelectronic.al</h3>
+                    <span class="span-header-footer-contain">Rreth Megaelectronic</span>
+                    <span class="span-header-footer-contain">Kushtet dhe Krivatesia</span>
+                    <span class="span-header-footer-contain">Perpunimi i te dhenave me karakter personal</span>
+                    <span class="span-header-footer-contain">Politika e perdorimit te cookie-uri</span>
+
+
+                </div>
+
+        </div>
+        <div class="footer-nav-div">
+            <div class="social-div">
+                <ul class="footer-ul">
+                    <li>
+                        <a href="https://facebook.com" target="_blank">
+                            <i class="fa-brands fa-facebook"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.instagram.com" target="_blank">
+                            <i class="fa-brands fa-instagram"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.tiktok.com" target="_blank">
+                            <i class="fa-brands fa-tiktok"></i>
+                        </a>
+                    </li>
+
+
+                </ul>
+            </div>
+            <div class="social-div">
+                <p class="copyright">copyright @2021-2025 all right reserved BC 1540836:: varianti mobil: powered by
+                    Kosta Kuqo
+                </p>
+
+
+            </div>
+        </div>
+
+        </footer>
+    </section>
 
 </body>
 
