work on progres

--- a/cart.html
+++ b/cart.html
@@ -61,7 +61,11 @@
                     <span class="produkte">Produkte</span>
                 </a>
                 <ul class="products-list">
-                    <li><i class="fa-solid fa-mobile mobile-icon"></i>Telefona mobil</li>
+                    <li>
+                        <a href="telefona.html">
+                            <i class="fa-solid fa-mobile mobile-icon"></i>Telefona mobil
+                        </a>
+                    </li>
                     <li><i class="fa-solid fa-headphones mobile-icon"></i>headphones</li>
                     <li><i class="fa-solid fa-charging-station mobile-icon"></i>chargers</li>
                     <li><i class="fa-solid fa-volume-high mobile-icon"></i>speakers</li>
