--- a/index.html
+++ b/index.html
@@ -66,7 +66,11 @@
                     <span class="produkte">Produkte</span>
                 </a>
                 <ul class="products-list">
-                    <li><i class="fa-solid fa-mobile mobile-icon"></i>Telefona mobil</li>
+                    <li>
+                        <a href="telefona.html">
+                            <i class="fa-solid fa-mobile mobile-icon"></i>Telefona mobil
+                        </a>
+                    </li>
                     <li><i class="fa-solid fa-headphones mobile-icon"></i>headphones</li>
                     <li><i class="fa-solid fa-charging-station mobile-icon"></i>chargers</li>
                     <li><i class="fa-solid fa-volume-high mobile-icon"></i>speakers</li>
@@ -88,8 +92,9 @@
                 <span class="preview-contain">mobile Phones</span>
                 <img class="image-contain" src="">
                 <span class="redirect-contain">
-                    <span class="icon-contain"><i class="fa-solid fa-arrow-up-right-from-square"></i></span>
-
+                    <a href="telefona.html" class="icon-contain-link">
+                        <span class="icon-contain">
+                            <i class="fa-solid fa-arrow-up-right-from-square"></i></span></a>
                     <span class="tooltip-text">shiko produket</span>
                 </span>
 
@@ -162,7 +167,11 @@
                 </div>
                 <div class="buyphone">
                     <span class="phoneprice"></span>
-                    <button class="buyphone-btn"><i class="fa-solid fa-cart-shopping"></i></button>
+                    <button class="buyphone-btn"><i class="fa-solid fa-cart-shopping"></i>
+                        <span class="tooltip-text-btn">Shto ne koshin tim</span>
+
+                    </button>
+
                 </div>
             </div>
 
