--- a/oferta.html
+++ b/oferta.html
@@ -63,7 +63,11 @@
                     <span class="produkte">Produkte</span>
                 </a>
                 <ul class="products-list">
-                    <li><i class="fa-solid fa-mobile mobile-icon"></i>Telefona mobil</li>
+                    <li>
+                        <a href="telefona.html">
+                            <i class="fa-solid fa-mobile mobile-icon"></i>Telefona mobil
+                        </a>
+                    </li>
                     <li><i class="fa-solid fa-headphones mobile-icon"></i>headphones</li>
                     <li><i class="fa-solid fa-charging-station mobile-icon"></i>chargers</li>
                     <li><i class="fa-solid fa-volume-high mobile-icon"></i>speakers</li>
@@ -75,6 +79,46 @@
             <li><a href="help.html">Help <span class="helpmega"><i class="fas fa-headphones"></i></span></a></li>
         </ul>
     </div>
+
+
+    <!-- ketu eshte seksioni i ofertave -->
+    <section class="dual-video-section">
+        <div class="video-box">
+            <video autoplay muted loop playsinline>
+                <source src="videos/oferta.mp4" type="video/mp4">
+            </video>
+            <div class="video-text">
+                <h3>Iphone 16 Pro Max</h3>
+                <span>Price</span>
+            </div>
+            <span class="day-offer">Oferta e dites</span>
+            <span class="akses-ofert">shiko oferten...</span>
+        </div>
+        <div class="video-box">
+            <video autoplay muted loop playsinline>
+                <source src="videos/oferta2.mp4" type="video/mp4">
+            </video>
+            <div class="video-text">
+                <h3>Iphone 16 Pro Max</h3>
+                <span>Price</span>
+            </div>
+            <span class="day-offer">Oferta e dites</span>
+            <span class="akses-ofert">shiko oferten...</span>
+
+        </div>
+        <div class="video-box">
+            <video autoplay muted loop playsinline>
+                <source src="videos/oferta 3.mp4" type="video/mp4">
+            </video>
+            <div class="video-text">
+                <h3>Iphone 16 Pro Max</h3>
+                <span>Price</span>
+            </div>
+            <span class="day-offer">Oferta e dites</span>
+            <span class="akses-ofert">shiko oferten...</span>
+        </div>
+    </section>
+    <!-- ketu mbaron seksioni i ofertave -->
 
 
     <section class="footer-section">
