work on progres

--- a/index.html
+++ b/index.html
@@ -101,6 +101,61 @@
             </div>
         </div>
     </section>
+
+    <section class="main-section">
+        <div class="main-div">
+            <div class="left-menu">
+                <ul>
+                    <li>
+                        <a href=""> <i class="fa-solid fa-mobile main-mobile-icon"></i>telefona mobil</a>
+                    </li>
+                    <li>
+                        <a href=""><i class="fa-solid fa-charging-station main-mobile-icon"></i>chargers</a>
+                    </li>
+                    <li>
+                        <a href=""><i class="fa-solid fa-mobile main-mobile-icon"></i>Covers</a>
+                    </li>
+                    <li>
+                        <a href=""><i class="fa-solid fa-headphones main-mobile-icon"></i>headphones</a>
+                    </li>
+                    <li>
+                        <a href=""><i class="fa-solid fa-music main-mobile-icon"></i>speakers</a>
+                    </li>
+                    <li>
+                        <a href=""><i class="fa-solid fa-bicycle main-mobile-icon"></i>scooters</a>
+                    </li>
+                    <li>
+                        <a href=""><i class="fa-solid fa-desktop main-mobile-icon"></i>periferice</a>
+                    </li>
+                    <li>
+                        <a href=""><i class="fa-solid fa-bicycle main-mobile-icon"></i>scooters</a>
+                    </li>
+                    <li>
+                        <a href=""><i class="fa-solid fa-desktop main-mobile-icon"></i>periferice</a>
+                    </li>
+
+                </ul>
+
+            </div>
+            <div class="right-menu">
+                <div class="carousel">
+                    <img class="carousel-image active" src="images/carouselimage1.png" alt="">
+                    <img class="carousel-image" src="images/image2carosel.png" alt="">
+                    <img class="carousel-image" src="images/image3carousel.png" alt="">
+
+                    <button class="prev">&#10094;</button>
+                    <button class="next">&#10095;</button>
+
+                    <!-- container pentru dot-uri -->
+                    <div class="carousel-dots"></div>
+                </div>
+
+            </div>
+
+        </div>
+
+    </section>
+
     <!-- 
     ketu fillon seksioni i videos -->
 
