work on progres

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="headphones.css">
     <link rel="stylesheet" href="speakers.css">
+    <link rel="stylesheet" href="covers.css ">
+    <link rel="stylesheet" href="chargers.css">
+    <link rel="stylesheet" href="scooters.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
@@ -165,15 +168,15 @@
 
 
         <div class="phonecardscontainer" id="phonecardscontainer">
-            <div class="phonecard template">
-                <span class="about-phone"></span>
+            <div class="phonecard card template">
+                <span class="about-product"></span>
                 <img class="phoneimage" src="" alt="Phone 1">
                 <h3 class="phonename"></h3>
                 <div class="phonedescription">
                 </div>
                 <div class="buyphone">
                     <span class="phoneprice"></span>
-                    <button class="buyphone-btn"><i class="fa-solid fa-cart-shopping"></i>
+                    <button class="buyphone-btn" id="add-to-cart-btn"><i class="fa-solid fa-cart-shopping"></i>
                         <span class="tooltip-text-btn">Shto ne koshin tim</span>
 
                     </button>
@@ -192,7 +195,7 @@
 
 
         <div class="headphonecardscontainer" id="headphonecardscontainer">
-            <div class="headphonecard template">
+            <div class="headphonecard card template">
                 <span class="about-headphone"></span>
                 <img class="headphoneimage" src="" alt="Phone 1">
                 <h3 class="headphonename"></h3>
@@ -220,7 +223,7 @@
 
 
         <div class="speakercardscontainer" id="speakercardscontainer">
-            <div class="speakercard template">
+            <div class="speakercard card template">
                 <span class="about-speaker"></span>
                 <img class="speakerimage" src="" alt="Phone 1">
                 <h3 class="speakername"></h3>
@@ -239,6 +242,88 @@
         </div>
 
         <button class="scroll-button speaker-scroll-btn-right" id="speaker-right">&#10095;</button>
+    </section>
+
+    <h1>Covers</h1>
+    <section class="coversection">
+        <button class="scroll-button cover-scroll-btn-left" id="cover-left">&#10094;</button>
+
+
+        <div class="covercardscontainer" id="covercardscontainer">
+            <div class="covercard card template">
+                <span class="about-cover"></span>
+                <img class="coverimage" src="" alt="Phone 1">
+                <h3 class="covername"></h3>
+                <div class="coverdescription">
+                </div>
+                <div class="buycover">
+                    <span class="coverprice"></span>
+                    <button class="buycover-btn"><i class="fa-solid fa-cart-shopping"></i>
+                        <span class="tooltip-text-btn">Shto ne koshin tim</span>
+
+                    </button>
+
+                </div>
+            </div>
+
+        </div>
+
+        <button class="scroll-button cover-scroll-btn-right" id="cover-right">&#10095;</button>
+    </section>
+
+
+    <h1>Chargers</h1>
+    <section class="chargersection">
+        <button class="scroll-button charger-scroll-btn-left" id="charger-left">&#10094;</button>
+
+
+        <div class="chargercardscontainer" id="chargercardscontainer">
+            <div class="chargercard card template">
+                <span class="about-charger"></span>
+                <img class="chargerimage" src="" alt="Phone 1">
+                <h3 class="chargername"></h3>
+                <div class="chargerdescription">
+                </div>
+                <div class="buycharger">
+                    <span class="chargerprice"></span>
+                    <button class="buycharger-btn"><i class="fa-solid fa-cart-shopping"></i>
+                        <span class="tooltip-text-btn">Shto ne koshin tim</span>
+
+                    </button>
+
+                </div>
+            </div>
+
+        </div>
+
+        <button class="scroll-button charger-scroll-btn-right" id="charger-right">&#10095;</button>
+    </section>
+
+    <h1>Scooters</h1>
+    <section class="scootersection">
+        <button class="scroll-button scooter-scroll-btn-left" id="scooter-left">&#10094;</button>
+
+
+        <div class="scootercardscontainer" id="scootercardscontainer">
+            <div class="scootercard card template">
+                <span class="about-scooter"></span>
+                <img class="scooterimage" src="" alt="Phone 1">
+                <h3 class="scootername"></h3>
+                <div class="scooterdescription">
+                </div>
+                <div class="buyscooter">
+                    <span class="scooterprice"></span>
+                    <button class="buyscooter-btn"><i class="fa-solid fa-cart-shopping"></i>
+                        <span class="tooltip-text-btn">Shto ne koshin tim</span>
+
+                    </button>
+
+                </div>
+            </div>
+
+        </div>
+
+        <button class="scroll-button scooter-scroll-btn-right" id="scooter-right">&#10095;</button>
     </section>
 
 
