work on progres

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 </a>
                 <ul class="products-list">
                     <li>
-                        <a href="telefona.html">
+                        <a href="">
                             <i class="fa-solid fa-mobile mobile-icon"></i>Telefona mobil
                         </a>
                     </li>
