--- a/scooters.html
+++ b/scooters.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="scooters.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
@@ -79,21 +80,21 @@
     </div>
 
 
-    <h1>Telefonat mobile</h1>
-    <section class="phonesection">
-        <button class="scroll-button scroll-btn-left" id="phone-left">&#10094;</button>
+    <h1>Headphones</h1>
+    <section class="scootersection">
+        <button class="scroll-button scooter-scroll-btn-left" id="scooter-left">&#10094;</button>
 
 
-        <div class="phonecardscontainer" id="phonecardscontainer">
-            <div class="phonecard template">
-                <span class="about-phone"></span>
-                <img class="phoneimage" src="" alt="Phone 1">
-                <h3 class="phonename"></h3>
-                <div class="phonedescription">
+        <div class="scootercardscontainer" id="scootercardscontainer">
+            <div class="scootercard card template">
+                <span class="about-scooter"></span>
+                <img class="scooterimage" src="" alt="Phone 1">
+                <h3 class="scootername"></h3>
+                <div class="scooterdescription">
                 </div>
-                <div class="buyphone">
-                    <span class="phoneprice"></span>
-                    <button class="buyphone-btn"><i class="fa-solid fa-cart-shopping"></i>
+                <div class="buyscooter">
+                    <span class="scooterprice"></span>
+                    <button class="buyscooter-btn"><i class="fa-solid fa-cart-shopping"></i>
                         <span class="tooltip-text-btn">Shto ne koshin tim</span>
                     </button>
 
@@ -102,7 +103,7 @@
 
         </div>
 
-        <button class="scroll-button scroll-btn-right" id="phone-right">&#10095;</button>
+        <button class="scroll-button scooter-scroll-btn-right" id="scooter-right">&#10095;</button>
     </section>
 
 
