--- a/cart.html
+++ b/cart.html
@@ -79,12 +79,14 @@
     </div>
 
     <section class="container content-section">
-        <h2 class="section-header">CART</h2>
+        <h2 class="section-header">KOSHI</h2>
         <div class="cart-row">
-            <span class="cart-item cart-header cart-column">ITEM</span>
-            <span class="cart-price cart-header cart-column">PRICE</span>
-            <span class="cart-quantity cart-header cart-column">QUANTITY</span>
+            <span class="cart-item cart-header cart-column">Produkti</span>
+            <span class="cart-options cart-header cart-column">Zgjedhjet</span>
+            <span class="cart-price cart-header cart-column">Cmimi</span>
+            <span class="cart-quantity cart-header cart-column">Sasia</span>
         </div>
+
         <div class="cart-items"></div>
         <div class="cart-total">
             <strong class="cart-total-title">Total</strong>
